# seminar_brick.sort

./: CMakeLists.txt  base.cpp  main.cpp  tests.cpp
animation/: CMakeLists.txt  main.cpp  teste.cpp
animation/lib/cmake/Ogg/: OggConfigVersion.cmake
animation/lib/cmake/libssh2/: libssh2-config-version.cmake
animation/src/lib/cmake/FLAC/: flac-config-version.cmake
animation/src/main/: CMakeLists.txt  main.cpp
functions/: quick_sort.cpp
header/: brick_sort.hpp  print_res.hpp
headers/: sort.hpp
lib/: lib.cpp
src/lib/: CMakeLists.txt  lib.hpp
